--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
     "scripts": {
-        "start": "ts-node src/index.ts"
+        "lint": "npx eslint src",
+        "start": "npm run lint && ts-node src/index.ts"
     },
     "devDependencies": {
         "@types/lodash.groupby": "^4.6.7",
+        "@typescript-eslint/eslint-plugin": "^5.59.11",
+        "@typescript-eslint/parser": "^5.59.11",
+        "eslint": "^8.43.0",
         "ts-node": "^10.9.1",
-        "typescript": "^5.0.2"
+        "typescript": "^5.1.3"
     },
     "dependencies": {
         "axios": "^1.3.5",
