Fixes for most linting issues (except line length).

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "lint": "npx eslint src",
+        "lint": "npx eslint .",
         "start": "npm run lint && ts-node src/index.ts"
     },
     "devDependencies": {
