--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
     "scripts": {
         "lint": "npx eslint .",
-        "start": "npm run lint && ts-node src/index.ts"
+        "fix": "npm audit fix && npm run lint -- --fix",
+        "build": "npm ci && npm audit && npm run lint",
+        "start": "npm run build && ts-node src/index.ts",
+        "start:new": "npm run start -- --ignoreRecordsBeforeInclusive=2023-06-28T17:41:35Z"
     },
     "devDependencies": {
         "@types/lodash.groupby": "^4.6.7",
         "@typescript-eslint/eslint-plugin": "^5.59.11",
         "@typescript-eslint/parser": "^5.59.11",
         "eslint": "^8.43.0",
+        "npm": "^9.8.0",
+        "ts-command-line-args": "^2.5.1",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.3"
     },
