--- a/package.json
+++ b/package.json
@@ -1,28 +1,52 @@
 {
+    "name": "beaconchain-tax-reporter",
+    "version": "0.0.0",
+    "author": "Chris O'Brien",
+    "license": "MIT",
     "scripts": {
-        "prettier:check": "npx prettier . --check",
+        "start": "npm run versions && npm run install:ci && npm run start:ci",
+        "start:new-only": "npm start -- --ignoreRecordsBeforeInclusive=2023-06-28T17:41:35Z",
+        "versions": "echo node: && node -v && echo npm: && npm -v",
+        "install:ci": "npm ci",
+        "install:local": "npm install",
+        "outdated:ci": "npm outdated",
+        "outdated:fix": "npm update --save",
+        "audit:ci": "npm audit --audit-level=none",
+        "audit:fix": "npm audit fix --force",
+        "prettier:ci": "npx prettier . --check",
         "prettier:fix": "npx prettier . --write",
-        "lint:check": "npx eslint .",
+        "lint:ci": "npx eslint . --max-warnings=0",
         "lint:fix": "npx eslint . --fix",
-        "fix": "npm audit fix && npm run lint:fix && npm run prettier:fix",
-        "build": "npm ci && npm audit && npm run lint:check && npm run prettier:check",
-        "start": "npm run build && ts-node src/index.ts",
-        "start:new-only": "npm start -- --ignoreRecordsBeforeInclusive=2023-06-28T17:41:35Z"
+        "build:ci": "npm run versions && npm run install:ci && npm run outdated:ci && npm run audit:ci && npm run prettier:ci && npm run lint:ci && npm run test:ci",
+        "build:fix": "npm run versions && npm run install:local && npm run outdated:fix && npm run audit:fix && npm run prettier:fix && npm run lint:fix && npm run test:jest:local",
+        "test:ci": "npm run test:jest:ci",
+        "test:jest:ci": "npx jest --ci",
+        "test:jest:local": "npx jest",
+        "start:ci": "npx ts-node src/index.ts",
+        "start:fix": "npm run build:fix && npm run start:ci",
+        "precommit": "npm run build:fix && npm run build:ci && npm run start:ci"
     },
     "devDependencies": {
+        "@types/jest": "^29.5.4",
         "@types/lodash.groupby": "^4.6.7",
-        "@typescript-eslint/eslint-plugin": "^5.59.11",
-        "@typescript-eslint/parser": "^5.59.11",
-        "eslint": "^8.43.0",
-        "npm": "^9.8.0",
-        "prettier": "^3.0.0",
+        "@typescript-eslint/eslint-plugin": "^6.4.1",
+        "@typescript-eslint/parser": "^6.4.1",
+        "eslint": "^8.48.0",
+        "jest": "^29.6.4",
+        "npm": "^9.8.1",
+        "prettier": "^3.0.2",
         "ts-command-line-args": "^2.5.1",
+        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
-        "typescript": "^5.1.3"
+        "typescript": "^5.2.2"
     },
     "dependencies": {
-        "axios": "^1.3.5",
-        "dotenv": "^16.0.3",
+        "axios": "^1.5.0",
+        "dotenv": "^16.3.1",
         "lodash.groupby": "^4.6.0"
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node"
     }
 }
